<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/units_header">
        <ListPreference
            app:defaultValue="m"
            app:entries="@array/units_entries"
            app:entryValues="@array/units_values"
            app:key="units"
            app:title="@string/units_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>


    <PreferenceCategory app:title="@string/map_style_header">


        <ListPreference
            app:defaultValue="2"
            app:entries="@array/map_styles_entries"
            app:entryValues="@array/map_styles_values"
            app:key="map_style"
            app:title="@string/map_style_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/line_width_entries"
            app:entryValues="@array/line_width_values"
            app:key="line_width"
            app:title="@string/line_width_title"
            app:useSimpleSummaryProvider="true" />


        <com.govnokoder.velotracker.LineColorDialog>

        </com.govnokoder.velotracker.LineColorDialog>


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/record_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/application_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>