<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:text="@string/save_and_exit_question"
        android:textColor="#F5F5F5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.internal.BaselineLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:background="#bbb"
        />

<!--    <LinearLayout-->
<!--        android:id="@+id/linear"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView"-->
<!--        android:orientation="vertical">-->


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveAndExitB"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/oval_button"
            android:text="@string/save_and_exit"
            android:textColor="#F5F5F5"
            android:textSize="15sp"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line"
            android:paddingHorizontal="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/exitWithoutSavingB"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/oval_button"
            android:text="@string/exit_without_saving"
            android:textColor="#F5F5F5"
            android:textSize="15sp"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveAndExitB"
            android:paddingHorizontal="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/oval_button"
            android:text="@string/cancel"
            android:textColor="#F5F5F5"
            android:textSize="15sp"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exitWithoutSavingB"
            android:paddingHorizontal="20dp"/>

<!--    </LinearLayout>-->



    <Space
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>