<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.internal.BaselineLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:background="#bbb" />

        <com.coursework.velotracker.MapViewInScroll
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="500dp" />

        <com.google.android.material.internal.BaselineLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:background="#bbb" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/total_distance"
                android:maxLines="1"
                android:theme="@style/Theme.Velotracker.StatTextViews" />
            <com.google.android.material.internal.BaselineLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"

                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="#bbb" />
            <TextView
                android:id="@+id/totalDistanceText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:maxLines="1"
                android:layout_weight="2"
                android:theme="@style/Theme.Velotracker.StatTextViewsValue"/>
        </LinearLayout>

        <com.google.android.material.internal.BaselineLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:background="#bbb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:text="@string/total_records"
                    android:theme="@style/Theme.Velotracker.StatTextViews" />

                <com.google.android.material.internal.BaselineLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="20dp"
                    android:background="#bbb" />

                <TextView
                    android:id="@+id/totalRecordsText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:maxLines="1"
                    android:layout_weight="2"
                    android:text="0"
                    android:theme="@style/Theme.Velotracker.StatTextViewsValue"/>

            </LinearLayout>


            <com.google.android.material.internal.BaselineLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#bbb" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:text="@string/total_time"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:maxLines="1"
                    android:layout_weight="1"
                    android:theme="@style/Theme.Velotracker.StatTextViews"
                    />
                <com.google.android.material.internal.BaselineLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="20dp"
                    android:background="#bbb" />
                <TextView
                    android:id="@+id/totalTimeText"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="0"
                    android:theme="@style/Theme.Velotracker.StatTextViewsValue"
                    />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.internal.BaselineLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:background="#bbb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:text="@string/max_speed"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:maxLines="1"
                    android:layout_weight="1"
                    android:theme="@style/Theme.Velotracker.StatTextViews"
                    />
                <com.google.android.material.internal.BaselineLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="20dp"
                    android:background="#bbb" />
                <TextView
                    android:id="@+id/maxSpeedText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:maxLines="1"
                    android:layout_weight="2"
                    android:text="0"
                    android:theme="@style/Theme.Velotracker.StatTextViewsValue"
                    />
            </LinearLayout>

            <com.google.android.material.internal.BaselineLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#bbb" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:text="@string/average_speed"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:theme="@style/Theme.Velotracker.StatTextViews"
                    />
                <com.google.android.material.internal.BaselineLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="10dp"
                    android:background="#bbb" />
                <TextView
                    android:id="@+id/averageSpeedText"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="0"
                    android:theme="@style/Theme.Velotracker.StatTextViewsValue"
                    />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.internal.BaselineLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:background="#bbb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:text="@string/temp"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:theme="@style/Theme.Velotracker.StatTextViews"
                    />
                <com.google.android.material.internal.BaselineLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="20dp"
                    android:background="#bbb" />
                <TextView
                    android:id="@+id/tempText"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="0"
                    android:theme="@style/Theme.Velotracker.StatTextViewsValue"
                    />
            </LinearLayout>
            <com.google.android.material.internal.BaselineLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#bbb" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:text="@string/max_temp"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:theme="@style/Theme.Velotracker.StatTextViews"
                    />
                <com.google.android.material.internal.BaselineLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="10dp"
                    android:background="#bbb" />
                <TextView
                    android:id="@+id/maxTempText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:maxLines="1"
                    android:layout_weight="2"
                    android:text="0"
                    android:theme="@style/Theme.Velotracker.StatTextViewsValue"
                    />
            </LinearLayout>
        </LinearLayout>







        <com.google.android.material.internal.BaselineLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:background="#bbb" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:orientation="vertical">
            <TextView
                android:text="@string/average_height"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:theme="@style/Theme.Velotracker.StatTextViews"
                />
            <com.google.android.material.internal.BaselineLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="#bbb" />
            <TextView
                android:id="@+id/averageHeightText"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="0"
                android:theme="@style/Theme.Velotracker.StatTextViewsValue"
                />
        </LinearLayout>

        <com.google.android.material.internal.BaselineLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:background="#bbb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:text="@string/max_height"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:theme="@style/Theme.Velotracker.StatTextViews"
                    />
                <com.google.android.material.internal.BaselineLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="20dp"
                    android:background="#bbb" />
                <TextView
                    android:id="@+id/maxHeightText"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="0"
                    android:theme="@style/Theme.Velotracker.StatTextViewsValue"
                    />
            </LinearLayout>
            <com.google.android.material.internal.BaselineLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#bbb" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:text="@string/min_height"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:theme="@style/Theme.Velotracker.StatTextViews"
                    />
                <com.google.android.material.internal.BaselineLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="10dp"
                    android:background="#bbb" />
                <TextView
                    android:id="@+id/minHeightText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:maxLines="1"
                    android:layout_weight="2"
                    android:text="0"
                    android:theme="@style/Theme.Velotracker.StatTextViewsValue"
                    />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.internal.BaselineLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:background="#bbb" />

    </LinearLayout>
</ScrollView>